RegionServer/src/MiniSQL/src/Interpreter/parser/y.output

state 0
	$accept: .statements $end 

	CREATE  shift 15
	DROP  shift 17
	EXECFILE  shift 22
	USE  shift 16
	SELECT  shift 18
	INSERT  shift 19
	UPDATE  shift 20
	DELETE  shift 21
	.  error

	statements  goto 1
	statement  goto 2
	create_database  goto 3
	use_database  goto 4
	create_table  goto 5
	create_index  goto 6
	drop_database  goto 7
	drop_table  goto 8
	drop_index  goto 9
	select_stmt  goto 10
	insert_stmt  goto 11
	update_stmt  goto 12
	delete_stmt  goto 13
	execfile_stmt  goto 14

state 1
	$accept:  statements.$end 
	statements:  statements.statement 

	$end  accept
	CREATE  shift 15
	DROP  shift 17
	EXECFILE  shift 22
	USE  shift 16
	SELECT  shift 18
	INSERT  shift 19
	UPDATE  shift 20
	DELETE  shift 21
	.  error

	statement  goto 23
	create_database  goto 3
	use_database  goto 4
	create_table  goto 5
	create_index  goto 6
	drop_database  goto 7
	drop_table  goto 8
	drop_index  goto 9
	select_stmt  goto 10
	insert_stmt  goto 11
	update_stmt  goto 12
	delete_stmt  goto 13
	execfile_stmt  goto 14

state 2
	statements:  statement.    (1)

	.  reduce 1 (src line 103)


state 3
	statement:  create_database.';' 

	';'  shift 24
	.  error


state 4
	statement:  use_database.';' 

	';'  shift 25
	.  error


state 5
	statement:  create_table.';' 

	';'  shift 26
	.  error


state 6
	statement:  create_index.';' 

	';'  shift 27
	.  error


state 7
	statement:  drop_database.';' 

	';'  shift 28
	.  error


state 8
	statement:  drop_table.';' 

	';'  shift 29
	.  error


state 9
	statement:  drop_index.';' 

	';'  shift 30
	.  error


state 10
	statement:  select_stmt.';' 

	';'  shift 31
	.  error


state 11
	statement:  insert_stmt.';' 

	';'  shift 32
	.  error


state 12
	statement:  update_stmt.';' 

	';'  shift 33
	.  error


state 13
	statement:  delete_stmt.';' 

	';'  shift 34
	.  error


state 14
	statement:  execfile_stmt.';' 

	';'  shift 35
	.  error


state 15
	create_database:  CREATE.DATABASE database_id 
	create_table:  CREATE.TABLE table_name '(' column_def_list ',' primary_key ')' 
	create_table:  CREATE.TABLE table_name '(' column_def_list ')' 
	create_index:  CREATE.unique_opt INDEX index_name ON table_name '(' key_part_list ')' 
	unique_opt: .    (43)

	UNIQUE  shift 39
	DATABASE  shift 36
	TABLE  shift 37
	.  reduce 43 (src line 370)

	unique_opt  goto 38

state 16
	use_database:  USE.DATABASE database_id 

	DATABASE  shift 40
	.  error


state 17
	drop_database:  DROP.DATABASE database_id 
	drop_table:  DROP.TABLE table_name 
	drop_index:  DROP.INDEX index_name ON table_name 

	DATABASE  shift 41
	TABLE  shift 42
	INDEX  shift 43
	.  error


state 18
	select_stmt:  SELECT.sel_field_list FROM table_name_list where_opt limit_opt 

	IDENT_LEGAL  shift 47
	'*'  shift 45
	.  error

	column_name_list  goto 46
	sel_field_list  goto 44

state 19
	insert_stmt:  INSERT.INTO table_name VALUES '(' value_list ')' 
	insert_stmt:  INSERT.INTO table_name '(' column_name_list ')' VALUES '(' value_list ')' 

	INTO  shift 48
	.  error


state 20
	update_stmt:  UPDATE.table_name SET set_opt_list where_opt 

	table_name  shift 49
	.  error


state 21
	delete_stmt:  DELETE.FROM IDENT_ALL where_opt 

	FROM  shift 50
	.  error


state 22
	execfile_stmt:  EXECFILE.IDENT_ALL 
	execfile_stmt:  EXECFILE.IDENT_ALL '.' IDENT_ALL 
	execfile_stmt:  EXECFILE.string_value 

	IDENT  shift 53
	IDENT_LEGAL  shift 54
	string_value  shift 52
	.  error

	IDENT_ALL  goto 51

state 23
	statements:  statements statement.    (2)

	.  reduce 2 (src line 105)


state 24
	statement:  create_database ';'.    (3)

	.  reduce 3 (src line 107)


state 25
	statement:  use_database ';'.    (4)

	.  reduce 4 (src line 109)


state 26
	statement:  create_table ';'.    (5)

	.  reduce 5 (src line 110)


state 27
	statement:  create_index ';'.    (6)

	.  reduce 6 (src line 111)


state 28
	statement:  drop_database ';'.    (7)

	.  reduce 7 (src line 112)


state 29
	statement:  drop_table ';'.    (8)

	.  reduce 8 (src line 113)


state 30
	statement:  drop_index ';'.    (9)

	.  reduce 9 (src line 114)


state 31
	statement:  select_stmt ';'.    (10)

	.  reduce 10 (src line 115)


state 32
	statement:  insert_stmt ';'.    (11)

	.  reduce 11 (src line 116)


state 33
	statement:  update_stmt ';'.    (12)

	.  reduce 12 (src line 117)


state 34
	statement:  delete_stmt ';'.    (13)

	.  reduce 13 (src line 118)


state 35
	statement:  execfile_stmt ';'.    (14)

	.  reduce 14 (src line 119)


state 36
	create_database:  CREATE DATABASE.database_id 

	database_id  shift 55
	.  error


state 37
	create_table:  CREATE TABLE.table_name '(' column_def_list ',' primary_key ')' 
	create_table:  CREATE TABLE.table_name '(' column_def_list ')' 

	table_name  shift 56
	.  error


state 38
	create_index:  CREATE unique_opt.INDEX index_name ON table_name '(' key_part_list ')' 

	INDEX  shift 57
	.  error


state 39
	unique_opt:  UNIQUE.    (44)

	.  reduce 44 (src line 375)


state 40
	use_database:  USE DATABASE.database_id 

	database_id  shift 58
	.  error


state 41
	drop_database:  DROP DATABASE.database_id 

	database_id  shift 59
	.  error


state 42
	drop_table:  DROP TABLE.table_name 

	table_name  shift 60
	.  error


state 43
	drop_index:  DROP INDEX.index_name ON table_name 

	index_name  shift 61
	.  error


state 44
	select_stmt:  SELECT sel_field_list.FROM table_name_list where_opt limit_opt 

	FROM  shift 62
	.  error


state 45
	sel_field_list:  '*'.    (58)

	.  reduce 58 (src line 524)


state 46
	column_name_list:  column_name_list.',' IDENT_LEGAL 
	sel_field_list:  column_name_list.    (59)

	','  shift 63
	.  reduce 59 (src line 531)


state 47
	column_name_list:  IDENT_LEGAL.    (45)

	.  reduce 45 (src line 397)


state 48
	insert_stmt:  INSERT INTO.table_name VALUES '(' value_list ')' 
	insert_stmt:  INSERT INTO.table_name '(' column_name_list ')' VALUES '(' value_list ')' 

	table_name  shift 64
	.  error


state 49
	update_stmt:  UPDATE table_name.SET set_opt_list where_opt 

	SET  shift 65
	.  error


state 50
	delete_stmt:  DELETE FROM.IDENT_ALL where_opt 

	IDENT  shift 53
	IDENT_LEGAL  shift 54
	.  error

	IDENT_ALL  goto 66

state 51
	execfile_stmt:  EXECFILE IDENT_ALL.    (15)
	execfile_stmt:  EXECFILE IDENT_ALL.'.' IDENT_ALL 

	'.'  shift 67
	.  reduce 15 (src line 122)


state 52
	execfile_stmt:  EXECFILE string_value.    (17)

	.  reduce 17 (src line 136)


state 53
	IDENT_ALL:  IDENT.    (96)

	.  reduce 96 (src line 691)


state 54
	IDENT_ALL:  IDENT_LEGAL.    (97)

	.  reduce 97 (src line 696)


state 55
	create_database:  CREATE DATABASE database_id.    (18)

	.  reduce 18 (src line 143)


state 56
	create_table:  CREATE TABLE table_name.'(' column_def_list ',' primary_key ')' 
	create_table:  CREATE TABLE table_name.'(' column_def_list ')' 

	'('  shift 68
	.  error


state 57
	create_index:  CREATE unique_opt INDEX.index_name ON table_name '(' key_part_list ')' 

	index_name  shift 69
	.  error


state 58
	use_database:  USE DATABASE database_id.    (19)

	.  reduce 19 (src line 151)


state 59
	drop_database:  DROP DATABASE database_id.    (47)

	.  reduce 47 (src line 429)


state 60
	drop_table:  DROP TABLE table_name.    (48)

	.  reduce 48 (src line 438)


state 61
	drop_index:  DROP INDEX index_name.ON table_name 

	ON  shift 70
	.  error


state 62
	select_stmt:  SELECT sel_field_list FROM.table_name_list where_opt limit_opt 

	IDENT  shift 53
	IDENT_LEGAL  shift 54
	.  error

	IDENT_ALL  goto 72
	table_name_list  goto 71

state 63
	column_name_list:  column_name_list ','.IDENT_LEGAL 

	IDENT_LEGAL  shift 73
	.  error


state 64
	insert_stmt:  INSERT INTO table_name.VALUES '(' value_list ')' 
	insert_stmt:  INSERT INTO table_name.'(' column_name_list ')' VALUES '(' value_list ')' 

	'('  shift 75
	VALUES  shift 74
	.  error


state 65
	update_stmt:  UPDATE table_name SET.set_opt_list where_opt 

	IDENT_LEGAL  shift 78
	.  error

	set_opt  goto 77
	set_opt_list  goto 76

state 66
	delete_stmt:  DELETE FROM IDENT_ALL.where_opt 
	where_opt: .    (62)

	WHERE  shift 80
	.  reduce 62 (src line 550)

	where_opt  goto 79

state 67
	execfile_stmt:  EXECFILE IDENT_ALL '.'.IDENT_ALL 

	IDENT  shift 53
	IDENT_LEGAL  shift 54
	.  error

	IDENT_ALL  goto 81

state 68
	create_table:  CREATE TABLE table_name '('.column_def_list ',' primary_key ')' 
	create_table:  CREATE TABLE table_name '('.column_def_list ')' 
	column_def_list: .    (22)

	IDENT_LEGAL  shift 84
	.  reduce 22 (src line 191)

	column_def  goto 83
	column_def_list  goto 82

state 69
	create_index:  CREATE unique_opt INDEX index_name.ON table_name '(' key_part_list ')' 

	ON  shift 85
	.  error


state 70
	drop_index:  DROP INDEX index_name ON.table_name 

	table_name  shift 86
	.  error


state 71
	select_stmt:  SELECT sel_field_list FROM table_name_list.where_opt limit_opt 
	table_name_list:  table_name_list.',' IDENT_ALL 
	where_opt: .    (62)

	','  shift 88
	WHERE  shift 80
	.  reduce 62 (src line 550)

	where_opt  goto 87

state 72
	table_name_list:  IDENT_ALL.    (60)

	.  reduce 60 (src line 539)


state 73
	column_name_list:  column_name_list ',' IDENT_LEGAL.    (46)

	.  reduce 46 (src line 403)


state 74
	insert_stmt:  INSERT INTO table_name VALUES.'(' value_list ')' 

	'('  shift 89
	.  error


state 75
	insert_stmt:  INSERT INTO table_name '('.column_name_list ')' VALUES '(' value_list ')' 

	IDENT_LEGAL  shift 47
	.  error

	column_name_list  goto 90

state 76
	update_stmt:  UPDATE table_name SET set_opt_list.where_opt 
	set_opt_list:  set_opt_list.',' set_opt 
	where_opt: .    (62)

	','  shift 92
	WHERE  shift 80
	.  reduce 62 (src line 550)

	where_opt  goto 91

state 77
	set_opt_list:  set_opt.    (53)

	.  reduce 53 (src line 486)


state 78
	set_opt:  IDENT_LEGAL.'=' Value 

	'='  shift 93
	.  error


state 79
	delete_stmt:  DELETE FROM IDENT_ALL where_opt.    (56)

	.  reduce 56 (src line 504)


state 80
	where_opt:  WHERE.expr_opt 
	Value: .    (74)

	IDENT  shift 53
	IDENT_LEGAL  shift 54
	NOT  shift 98
	NULL  shift 104
	TRUE  shift 102
	FALSE  shift 103
	'('  shift 95
	decimal_value  shift 105
	hex_value  shift 106
	float_value  shift 107
	string_value  shift 99
	.  reduce 74 (src line 608)

	int64_value  goto 100
	float64_value  goto 101
	IDENT_ALL  goto 96
	expr_opt  goto 94
	Value  goto 97

state 81
	execfile_stmt:  EXECFILE IDENT_ALL '.' IDENT_ALL.    (16)

	.  reduce 16 (src line 130)


state 82
	create_table:  CREATE TABLE table_name '(' column_def_list.',' primary_key ')' 
	create_table:  CREATE TABLE table_name '(' column_def_list.')' 
	column_def_list:  column_def_list.',' column_def 

	','  shift 108
	')'  shift 109
	.  error


state 83
	column_def_list:  column_def.    (23)

	.  reduce 23 (src line 196)


state 84
	column_def:  IDENT_LEGAL.column_type unique_opt not_null_opt 

	BOOL  shift 112
	INT64  shift 113
	FLOAT64  shift 114
	BYTES  shift 115
	DATE  shift 116
	TIMESTAMP  shift 117
	.  error

	column_type  goto 110
	scalar_type  goto 111

state 85
	create_index:  CREATE unique_opt INDEX index_name ON.table_name '(' key_part_list ')' 

	table_name  shift 118
	.  error


state 86
	drop_index:  DROP INDEX index_name ON table_name.    (49)

	.  reduce 49 (src line 447)


state 87
	select_stmt:  SELECT sel_field_list FROM table_name_list where_opt.limit_opt 
	limit_opt: .    (87)

	LIMIT  shift 120
	.  reduce 87 (src line 645)

	limit_opt  goto 119

state 88
	table_name_list:  table_name_list ','.IDENT_ALL 

	IDENT  shift 53
	IDENT_LEGAL  shift 54
	.  error

	IDENT_ALL  goto 121

state 89
	insert_stmt:  INSERT INTO table_name VALUES '('.value_list ')' 
	Value: .    (74)

	NULL  shift 104
	TRUE  shift 102
	FALSE  shift 103
	decimal_value  shift 105
	hex_value  shift 106
	float_value  shift 107
	string_value  shift 99
	.  reduce 74 (src line 608)

	int64_value  goto 100
	float64_value  goto 101
	Value  goto 123
	value_list  goto 122

state 90
	column_name_list:  column_name_list.',' IDENT_LEGAL 
	insert_stmt:  INSERT INTO table_name '(' column_name_list.')' VALUES '(' value_list ')' 

	','  shift 63
	')'  shift 124
	.  error


state 91
	update_stmt:  UPDATE table_name SET set_opt_list where_opt.    (52)

	.  reduce 52 (src line 476)


state 92
	set_opt_list:  set_opt_list ','.set_opt 

	IDENT_LEGAL  shift 78
	.  error

	set_opt  goto 125

state 93
	set_opt:  IDENT_LEGAL '='.Value 
	Value: .    (74)

	NULL  shift 104
	TRUE  shift 102
	FALSE  shift 103
	decimal_value  shift 105
	hex_value  shift 106
	float_value  shift 107
	string_value  shift 99
	.  reduce 74 (src line 608)

	int64_value  goto 100
	float64_value  goto 101
	Value  goto 126

state 94
	where_opt:  WHERE expr_opt.    (63)
	expr_opt:  expr_opt.AND expr_opt 
	expr_opt:  expr_opt.OR expr_opt 

	AND  shift 127
	OR  shift 128
	.  reduce 63 (src line 554)


state 95
	expr_opt:  '('.expr_opt ')' 
	Value: .    (74)

	IDENT  shift 53
	IDENT_LEGAL  shift 54
	NOT  shift 98
	NULL  shift 104
	TRUE  shift 102
	FALSE  shift 103
	'('  shift 95
	decimal_value  shift 105
	hex_value  shift 106
	float_value  shift 107
	string_value  shift 99
	.  reduce 74 (src line 608)

	int64_value  goto 100
	float64_value  goto 101
	IDENT_ALL  goto 96
	expr_opt  goto 129
	Value  goto 97

state 96
	expr_opt:  IDENT_ALL.compare_type Value 
	expr_opt:  IDENT_ALL.compare_type IDENT_ALL 

	'='  shift 131
	'<'  shift 132
	'>'  shift 133
	LE  shift 134
	GE  shift 135
	NE  shift 136
	.  error

	compare_type  goto 130

state 97
	expr_opt:  Value.compare_type IDENT_ALL 
	expr_opt:  Value.compare_type Value 

	'='  shift 131
	'<'  shift 132
	'>'  shift 133
	LE  shift 134
	GE  shift 135
	NE  shift 136
	.  error

	compare_type  goto 137

state 98
	expr_opt:  NOT.expr_opt 
	Value: .    (74)

	IDENT  shift 53
	IDENT_LEGAL  shift 54
	NOT  shift 98
	NULL  shift 104
	TRUE  shift 102
	FALSE  shift 103
	'('  shift 95
	decimal_value  shift 105
	hex_value  shift 106
	float_value  shift 107
	string_value  shift 99
	.  reduce 74 (src line 608)

	int64_value  goto 100
	float64_value  goto 101
	IDENT_ALL  goto 96
	expr_opt  goto 138
	Value  goto 97

state 99
	Value:  string_value.    (75)

	.  reduce 75 (src line 612)


state 100
	Value:  int64_value.    (76)

	.  reduce 76 (src line 616)


state 101
	Value:  float64_value.    (77)

	.  reduce 77 (src line 620)


state 102
	Value:  TRUE.    (78)

	.  reduce 78 (src line 624)


state 103
	Value:  FALSE.    (79)

	.  reduce 79 (src line 628)


state 104
	Value:  NULL.    (80)

	.  reduce 80 (src line 632)


state 105
	int64_value:  decimal_value.    (93)

	.  reduce 93 (src line 672)


state 106
	int64_value:  hex_value.    (94)

	.  reduce 94 (src line 678)


state 107
	float64_value:  float_value.    (95)

	.  reduce 95 (src line 684)


state 108
	create_table:  CREATE TABLE table_name '(' column_def_list ','.primary_key ')' 
	column_def_list:  column_def_list ','.column_def 
	primary_key: .    (26)

	IDENT_LEGAL  shift 84
	PRIMARY  shift 141
	.  reduce 26 (src line 212)

	column_def  goto 140
	primary_key  goto 139

state 109
	create_table:  CREATE TABLE table_name '(' column_def_list ')'.    (21)

	.  reduce 21 (src line 176)


state 110
	column_def:  IDENT_LEGAL column_type.unique_opt not_null_opt 
	unique_opt: .    (43)

	UNIQUE  shift 39
	.  reduce 43 (src line 370)

	unique_opt  goto 142

state 111
	column_type:  scalar_type.    (31)

	.  reduce 31 (src line 286)


state 112
	scalar_type:  BOOL.    (32)

	.  reduce 32 (src line 293)


state 113
	scalar_type:  INT64.    (33)

	.  reduce 33 (src line 298)


state 114
	scalar_type:  FLOAT64.    (34)

	.  reduce 34 (src line 302)


state 115
	scalar_type:  BYTES.'(' length ')' 

	'('  shift 143
	.  error


state 116
	scalar_type:  DATE.    (36)

	.  reduce 36 (src line 311)

